--- a/css/reset.css
+++ b/css/reset.css
@@ -47,6 +47,11 @@ body {
     overflow-x: hidden;
 }
 
+html, body {
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
+}
+
 /* --------------------------------------------------------------------------
    RESET MARGINS
    -------------------------------------------------------------------------- */
